<resources
    xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Does It Rain</string>


    <!--forecast view load error-->
    <string name="invalid_view_type">Invalid view type, value of</string>
    <string name="failed_fetching_data">Filed fetching data</string>

    <!--menu items-->
    <string name="action_settings">Settings</string>

    <!--detail activity labels-->
    <string name="humidity_label">Humidity</string>
    <string name="pressure_label">Pressure</string>
    <string name="wind_label">Wind</string>
    <string name="rain_label">Rain</string>
    <!-- - - - - - - - - - - - - - -
  - Used by DateUtils  -
  - - - - - - - - - - - - - - -->

    <!-- For labelling today's forecast -->
    <string name="today">Today</string>

    <!-- For labelling tomorrow's forecast -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format -->
    <string name="format_full_friendly_date">
        %1$s, %2$s %3$s
    </string>
    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
      - Used for Accessibility purposes (Accessibility == a11y)                            -
      -                                                                                    -
      - Fun Fact: Accessibility is abbreviated a11y because accessibility starts with 'a', -
      - followed by 11 letters, and then a 'y'. It is pronounced alley, like an alley cat. -
      - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <string name="a11y_high_temp"><xliff:g id="high">%1$s</xliff:g></string>
    <string name="a11y_low_temp"><xliff:g id="low">%1$s</xliff:g></string>
    <string name="a11y_humidity">Humidity: <xliff:g id="humidity">%1$s</xliff:g></string>
    <string name="a11y_pressure">Barometric Pressure: <xliff:g id="pressure">%1$s</xliff:g></string>
    <string name="a11y_wind">Wind speed and direction: <xliff:g id="wind">%1$s</xliff:g></string>

    <!-- - - - - - - - - - - - - - - - -
       - Used by WeatherUtils   -
       - - - - - - - - - - - - - - - - -->

    <!-- Temperature format -->
    <string name="format_temperature">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0
    </string>

    <!-- Wind in kph -->
    <string name="format_wind_kmh">
        <xliff:g id="speed">%1$1.0f</xliff:g> km/h
        <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format -->
    <string name="format_pressure">
        <xliff:g id="pressure">%1.0f</xliff:g> hPa
    </string>

    <!-- Humidity format -->
    <string name="format_humidity">
        <xliff:g id="humidity">%1d</xliff:g> %%
    </string>

    <!--Rain format-->
    <string name="format_rain">
        <xliff:g id="humidity">%1.2f</xliff:g> m/s
    </string>

    <!-- - - - - - - - - - - - - - - - -
    - Preference settings
    - - - - - - - - - - - - - - - - -->
    <string name="pref_unit_key">unit_key</string>

    <!-- Label for the temperature units preference -->
    <string name="pref_units_label">Temperature Units</string>

    <!-- Label for metric option in temperature unit preference -->
    <string name="pref_units_label_metric">Metric</string>

    <!-- Label for imperial option in temperature unit preference -->
    <string name="pref_units_label_imperial">Imperial</string>

    <!-- Key name for temperature unit preference in SharedPreferences -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Value in SharedPreferences for metric temperature unit option -->
    <string name="pref_units_metric" translatable="false">metric</string>

    <!-- Value in SharedPreferences for imperial temperature unit option -->
    <string name="pref_units_imperial" translatable="false">imperial</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_default">true</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>

    <string name="pref_cnt_key" translatable="false">cnt</string>
    <string name="pref_cnt_label">Number of days forecast</string>
    <string name="pref_cnt_default_value">7</string>
    <string name="pref_cnt_error">Please insert number of days between 1 and 17</string>

    <!-- - - - - - - - - - - - - - - - -
       - Used by app's warning or error message   -
       - - - - - - - - - - - - - - - - -->
    <string name="reject_permission_warning">You has rejected an importance permission, this app can not work without that permission. Please consider it to use permission!</string>

    <!-- - - - - - - - - - - - - - - - -
   - Used by NotificationUtils   -
   - - - - - - - - - - - - - - - - -->
    <string name="notification_text_format">
        New weather data has been downloaded \n Time update: %1$s
    </string>
</resources>
