<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/extra_detail_background"
        >

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            android:id="@+id/guide_half_vertical" />

        <!--humidity label-->
        <TextView
            style="@style/ExtraWeatherText"
            android:id="@+id/humidity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity_label"
            app:layout_constraintBottom_toTopOf="@+id/pressure_label"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="24dp"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent" />

        <!--humidity-->
        <TextView
            style="@style/ExtraWeatherText"
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="38%"
            app:layout_constraintLeft_toLeftOf="@+id/guide_half_vertical"
            app:layout_constraintBottom_toBottomOf="@+id/humidity_label"
            />

        <!--pressure label-->
        <TextView
            style="@style/ExtraWeatherText"
            android:id="@+id/pressure_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="24dp"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent" />

        <!--pressure-->
        <TextView
            style="@style/ExtraWeatherText"
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="699 hPa"
            app:layout_constraintBottom_toBottomOf="@+id/pressure_label"
            app:layout_constraintLeft_toLeftOf="@+id/guide_half_vertical" />

        <!--wind label-->
        <TextView
            style="@style/ExtraWeatherText"
            android:id="@+id/wind_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_label"
            app:layout_constraintTop_toBottomOf="@+id/pressure_label"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <!--wind-->
        <TextView
            style="@style/ExtraWeatherText"
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="4km/h NW"
            app:layout_constraintBottom_toBottomOf="@+id/wind_label"
            app:layout_constraintLeft_toLeftOf="@+id/guide_half_vertical" />

    </android.support.constraint.ConstraintLayout>
</layout>